extract data from the API

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   </header>
 
   <main>
-    <!-- art from API will be added to this  div -->
-    <div class="wrapper" id="artwork"></div>
+    <div class="wrapper">
+      <!-- art from API will be added to this  div -->
+      <ul id="artwork"></ul>
+    </div>
   </main>
   
   <script src="app.js"></script>
