--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 
   <header>
     <div class="container">
-      <h1 id="page-title">Art with Monkeys</h1>
+      <h1 id="page-title">Art with <span>Bears</span>!!!</h1>
 
       <form action="">
         <label for="animalChoices">Select your animal you like to see</label>
         <select name="animalChoices" id="animalChoices">
+          <option value="bear">Bears</option>
           <option value="monkey">Monkeys</option>
-          <option value="whales">Whales</option>
+          <option value="whale">Whales</option>
           <option value="cow">Cows</option>
           <option value="shark">Sharks</option>
           <option value="mice">Mice</option>
           <option value="bird">Birds</option>
-          <option value="penguins">Penguins</option>
+          <option value="penguin">Penguins</option>
           <option value="turtle">Turtles</option>
         </select>
       </form>
